Version 10.4.143 - 05 July 2007, by Thierry Vignaud

- service_harddrake:
  o do not bother configure old Xorg conf files anymore
  o log right driver we're switching to from fglrx
  o factorize code handling switch for both ati & nvidia

Version 10.4.143 - 04 July 2007, by Thierry Vignaud

- centralize common textdomains in a single common place, thus
  ensuring they'll be binded (#31580)
- diskdrake:
  o fix resizing's faillures due to udev's race when writing the partition
    table (deleting then recreating the nodes leaves a race window...)
- service_harddrake:
  o do not enable fglrx libraries when disabling fglrx...
  o only log "switch xorg driver" & do actual GL config if we do need it
  o really log when switching from fglrx to another driver

Version 10.4.140 -  27 June 2007, by Thierry Vignaud

- merge "ide" and "all_ide" categories since we now use fully
  modularized ide drivers
- bootloader-config: 
  o configure ide-controller in modprobe.conf for upgrading to kernels 
    with modularized ide drivers

Version 10.4.139 -  27 June 2007, by Thierry Vignaud

- add mandrake_release_info() function

Version 10.4.138 -  21 June 2007, by Thierry Vignaud

- add support for snd-cmi8788 driver
- do not package drakautoinst (#27860)
- draksound:
  o prevent "unlisted driver" error for snd-aoa, snd-cs5530,
    snd-echo3g, snd-usb-caiaq & snd-usb-usx2y drivers
- harddrake UI:
  o stop scannerdrake from fooling us about scanners and from leading
    us to display twice the same device (#31182)

Version 10.4.136 -  12 June 2007, by Thierry Vignaud

- diskdrake
  o fix 1.9TB displayed as 1TB
- drakboot -boot
  o update splash when changing framebuffer resolution (#27470)
- harddrake UI:
  o add a class for biometric sensors (fingerprint for now) (#31182)

Version 10.4.135 -  08 June 2007, by Thierry Vignaud

- interactive layer:
  o enable to override default size with Gtk+ frontend
- drakfont:
  o do not misbelieve a font is already installed if substring of