@@ -117,6 +117,7 @@
   /etc/fonts/fonts.conf
   /etc/protocols
   /etc/rpm/platform
+  /lib/udev/usb_id
   /usr/LIB/xserver/SecurityPolicy
   /etc/pango/ARCH/pango.modules
   /usr/LIB/gtk-2.0/*/loaders/libpixbufloader-png.so
