@@ -1,3 +1,5 @@
+- add /lib/udev/usb_id which is needed by mouse.pm to generate /dev/input/by-id/xxx
+
 Version 10.4.142 - 2 July 2007, by Pascal "Pixel" Rigaux
 
 - brown paper bag fix (stage1 can't create symlink /etc/rpm/platform)
