@@ -1,3 +1,6 @@
+- modify usbWacom() for mousedrake
+  (conflicts with drakx-kbd-mouse-x11 < 0.19)
+
 Version 10.4.143 - 05 July 2007, by Thierry Vignaud
 
 - service_harddrake:
